[gd_scene load_steps=27 format=3 uid="uid://d3hb08swexfpk"]

[ext_resource type="Script" path="res://scripts/Editor/_map_editor.gd" id="1_35pr7"]
[ext_resource type="Script" path="res://Scene/b_anim.gd" id="2_bwg2g"]
[ext_resource type="Script" path="res://scripts/Editor/b_meta.gd" id="2_f85ny"]
[ext_resource type="Script" path="res://Scene/animation_editor.gd" id="2_smjvc"]
[ext_resource type="Script" path="res://scripts/Editor/b_animationWindow.gd" id="3_krufn"]
[ext_resource type="Script" path="res://scripts/Editor/inspecter.gd" id="3_s286n"]
[ext_resource type="Script" path="res://scripts/Editor/window_song_setup.gd" id="4_f2l3r"]
[ext_resource type="Script" path="res://Scene/animation_open_folder.gd" id="6_juang"]

[sub_resource type="InputEventKey" id="InputEventKey_6701s"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_k3vxe"]
events = [SubResource("InputEventKey_6701s")]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_efahd"]
blend_mode = 1

[sub_resource type="InputEventKey" id="InputEventKey_ldwwp"]
device = -1
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_3morn"]
events = [SubResource("InputEventKey_ldwwp")]

[sub_resource type="InputEventKey" id="InputEventKey_nomtr"]
device = -1
keycode = 90
unicode = 122

[sub_resource type="Shortcut" id="Shortcut_i5ja0"]
events = [SubResource("InputEventKey_nomtr")]

[sub_resource type="InputEventKey" id="InputEventKey_dnr3l"]
device = -1
keycode = 88
unicode = 120

[sub_resource type="Shortcut" id="Shortcut_haqgg"]
events = [SubResource("InputEventKey_dnr3l")]

[sub_resource type="InputEventKey" id="InputEventKey_87c74"]
device = -1
keycode = 67
unicode = 99

[sub_resource type="Shortcut" id="Shortcut_nan3t"]
events = [SubResource("InputEventKey_87c74")]

[sub_resource type="InputEventKey" id="InputEventKey_2na7k"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="Shortcut" id="Shortcut_ei0am"]
events = [SubResource("InputEventKey_2na7k")]

[sub_resource type="InputEventKey" id="InputEventKey_mnn5q"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="Shortcut" id="Shortcut_pcedd"]
events = [SubResource("InputEventKey_mnn5q")]

[sub_resource type="InputEventKey" id="InputEventKey_mb8kq"]
device = -1
keycode = 82
unicode = 114

[sub_resource type="Shortcut" id="Shortcut_jt3v3"]
events = [SubResource("InputEventKey_mb8kq")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqd54"]
bg_color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="MapEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35pr7")

[node name="Preview" type="Control" parent="."]
anchors_preset = 0
offset_left = 235.0
offset_right = 735.0
offset_bottom = 1000.0

[node name="BG" type="ColorRect" parent="Preview"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 2955.0
color = Color(0, 0, 0, 0.196078)

[node name="RailContainer" type="Control" parent="Preview"]
anchors_preset = 0
offset_left = 240.0
offset_top = 1000.0
offset_right = 240.0
offset_bottom = 1000.0

[node name="BG2" type="ColorRect" parent="Preview"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 897.0
offset_right = 250.0
offset_bottom = 902.0
color = Color(0, 0, 0, 1)

[node name="B_anim" type="Button" parent="."]
layout_mode = 2
offset_left = 1497.0
offset_top = 896.0
offset_right = 1585.0
offset_bottom = 936.0
focus_mode = 0
text = "animation"
script = ExtResource("2_bwg2g")

[node name="B_meta" type="Button" parent="."]
layout_mode = 2
offset_left = 1494.0
offset_top = 944.0
offset_right = 1587.0
offset_bottom = 984.0
focus_mode = 0
text = "song setup"
script = ExtResource("2_f85ny")

[node name="SongControl" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -552.0
offset_top = -69.0
offset_right = -351.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="B_Pause" type="Button" parent="SongControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_k3vxe")
text = "Play
"

[node name="SongSlider" type="HSlider" parent="."]
material = SubResource("CanvasItemMaterial_efahd")
layout_direction = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -24.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(400, 0)
min_value = -1.0
step = 0.001

[node name="Inspecter" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -312.0
offset_bottom = -596.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("3_s286n")

[node name="Label" type="Label" parent="Inspecter"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Inspector
"

[node name="Defaults" type="VBoxContainer" parent="Inspecter"]
layout_mode = 0
offset_left = 1.0
offset_top = 27.0
offset_right = 41.0
offset_bottom = 67.0

[node name="Label" type="Label" parent="Inspecter/Defaults"]
layout_mode = 2
text = "DivBeat
"

[node name="Divis" type="LineEdit" parent="Inspecter/Defaults"]
layout_mode = 2

[node name="Adjust" type="Button" parent="Inspecter/Defaults"]
layout_mode = 2
text = "Adjust to notes"

[node name="Vbox" type="VBoxContainer" parent="Inspecter"]
layout_mode = 0
offset_left = 6.0
offset_top = 155.0
offset_right = 46.0
offset_bottom = 195.0

[node name="NoteControl" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="B_Save" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
text = "SAVE
MAP"

[node name="B_Remove" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_3morn")
text = "REMOVE"

[node name="B_Note" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_i5ja0")
text = "NOTE (Z)"

[node name="B_Note2" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_haqgg")
text = "TRACE (X)"

[node name="B_Note3" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_nan3t")
text = "SPIKE (C)"

[node name="B_Left" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_ei0am")
text = "LEFT(A)"

[node name="B_Right" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_pcedd")
text = "RIGHT(D)"

[node name="B_Rail" type="Button" parent="NoteControl"]
layout_mode = 2
focus_mode = 0
shortcut = SubResource("Shortcut_jt3v3")
text = "RAIL (R)"

[node name="Animation" type="Window" parent="."]
gui_embed_subwindows = true
title = "Animation"
position = Vector2i(0, 36)
size = Vector2i(1280, 720)
visible = false
unresizable = true
popup_window = true
script = ExtResource("3_krufn")

[node name="New" type="Button" parent="Animation"]
offset_left = 120.0
offset_top = 10.0
offset_right = 283.0
offset_bottom = 41.0
text = "Add New Animation"

[node name="Folder" type="Button" parent="Animation"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1270.0
offset_top = 10.0
offset_right = -1167.0
offset_bottom = 41.0
grow_horizontal = 0
text = "Open Folder"
script = ExtResource("6_juang")

[node name="VBoxContainer" type="VBoxContainer" parent="Animation"]
offset_top = 50.0
offset_right = 40.0
offset_bottom = 95.0

[node name="Panel" type="Panel" parent="Animation"]
clip_contents = true
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -880.0
offset_right = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aqd54")
script = ExtResource("2_smjvc")

[node name="name" type="LineEdit" parent="Animation/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 120.0
offset_top = 10.0
offset_right = 420.0
offset_bottom = 50.0
grow_horizontal = 2
placeholder_text = "animation name"

[node name="fps" type="LineEdit" parent="Animation/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 320.0
offset_top = 55.0
offset_right = 420.0
offset_bottom = 95.0
grow_horizontal = 2
placeholder_text = "fps"

[node name="ADD" type="Button" parent="Animation/Panel"]
layout_mode = 2
offset_top = 600.0
offset_right = 83.0
offset_bottom = 640.0
text = "Add"

[node name="REMOVE" type="Button" parent="Animation/Panel"]
layout_mode = 2
offset_left = 100.0
offset_top = 600.0
offset_right = 183.0
offset_bottom = 640.0
text = "Delete"

[node name="FramesContainer" type="HBoxContainer" parent="Animation/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 650.0
offset_right = 102.0
offset_bottom = 690.0

[node name="OptionButton" type="OptionButton" parent="Animation/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 192.0
offset_bottom = 41.0

[node name="TextureRect" type="TextureRect" parent="Animation/Panel"]
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 700.0
offset_bottom = 600.0
expand_mode = 1
stretch_mode = 5

[node name="Idle" type="CheckButton" parent="Animation/Panel"]
layout_mode = 0
offset_left = 700.0
offset_top = 570.0
offset_right = 876.0
offset_bottom = 601.0
text = "Is Idle"

[node name="Default" type="CheckButton" parent="Animation/Panel"]
layout_mode = 0
offset_left = 700.0
offset_top = 600.0
offset_right = 876.0
offset_bottom = 631.0
text = "Is Default Action"

[node name="Label" type="Label" parent="Animation/Panel"]
layout_mode = 0
offset_left = 740.0
offset_top = 60.0
offset_right = 780.0
offset_bottom = 83.0
text = "fps"

[node name="Song Setup" type="Window" parent="."]
title = "Song Setup"
position = Vector2i(800, 300)
size = Vector2i(500, 400)
visible = false
unresizable = true
popup_window = true
script = ExtResource("4_f2l3r")

[node name="Control" type="Control" parent="Song Setup"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Song Setup/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title" type="HBoxContainer" parent="Song Setup/Control/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Song Setup/Control/VBox/title"]
layout_mode = 2
text = "Title"

[node name="meta_title" type="LineEdit" parent="Song Setup/Control/VBox/title"]
layout_mode = 2
placeholder_text = "Song Title"
expand_to_text_length = true

[node name="artist" type="HBoxContainer" parent="Song Setup/Control/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Song Setup/Control/VBox/artist"]
layout_mode = 2
text = "Artist"

[node name="meta_artist" type="LineEdit" parent="Song Setup/Control/VBox/artist"]
layout_mode = 2
placeholder_text = "Artist Name"
expand_to_text_length = true

[node name="Difficulty" type="HBoxContainer" parent="Song Setup/Control/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Song Setup/Control/VBox/Difficulty"]
layout_mode = 2
text = "Difficulty"

[node name="diff_name" type="LineEdit" parent="Song Setup/Control/VBox/Difficulty"]
layout_mode = 2
placeholder_text = "Hard"
expand_to_text_length = true

[node name="Difficulty2" type="HBoxContainer" parent="Song Setup/Control/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Song Setup/Control/VBox/Difficulty2"]
layout_mode = 2
text = "Difficulty Value"

[node name="diff_value" type="LineEdit" parent="Song Setup/Control/VBox/Difficulty2"]
layout_mode = 2
placeholder_text = "10"
expand_to_text_length = true

[node name="StartPoint" type="HBoxContainer" parent="Song Setup/Control/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Song Setup/Control/VBox/StartPoint"]
layout_mode = 2
text = "StartPoint"

[node name="song_bpmstart" type="LineEdit" parent="Song Setup/Control/VBox/StartPoint"]
layout_mode = 2
placeholder_text = "0 // where the beat starts (ms)"
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="bpm" type="HBoxContainer" parent="Song Setup/Control/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Song Setup/Control/VBox/bpm"]
layout_mode = 2
text = "BPM"

[node name="song_bpm" type="LineEdit" parent="Song Setup/Control/VBox/bpm"]
layout_mode = 2
placeholder_text = "100"
virtual_keyboard_type = 2

[node name="SelectSong" type="HBoxContainer" parent="Song Setup/Control/VBox"]
layout_mode = 2

[node name="Button" type="Button" parent="Song Setup/Control/VBox/SelectSong"]
layout_mode = 2
text = "Explore Song"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1031.0
offset_top = 127.0
offset_right = 1364.0
offset_bottom = 202.0
text = "This Is Editor Preview
CAN'T SAVE MAP ON WEB
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -510.0
offset_top = 18.0
offset_right = -74.0
offset_bottom = 197.0
text = "1.타이머로 폴더감지해서 스프라이트 자동 불러오기
2. 애니메이션 삭제버튼
3. fps랑 name 동기화
4. playerState (idle 등) 토글버튼
5. Inspector 에 노트선택시 애니메이션 선택기능
6. 애니메이션 미리보기 기능
7. 애니메이션 편집기에서 미리보기"
